# open-hailo

./: .gitignore  .hailo-state.json  AUTHORITATIVE_INVENTORY.md  CLAUDE.md  CONTRIBUTING.md  CORRECTIONS_SUMMARY.md  DRIVER_SCRIPTS_FIXED.md  FEATURE_CHECKLIST.md  FINAL_RESOLUTION.md  FINAL_STRUCTURE.md  GITHUB_PUBLISH.md  LICENSE  README.md  SCRIPT_REFERENCES_FIXED.md  STATUS.md  SUMMARY.md  VERSION_MISMATCH_RESOLUTION.md  build.sh  cursor_open_source_strategy_for_hailo_a.md  hailo_yolov8_inference.json  setup  setup.sh  test_detection.py  test_opencv.sh
.cursor/rules/: project_rules.md
apps/: CMakeLists.txt  camera_hailo_test.cpp  device_test.cpp  simple_example.cpp  simple_inference_example.cpp
configs/frigate/: README.md
configs/opencv-custom/: README.md  install.sh
configs/python-direct/: README.md  install.sh  requirements.txt
configs/rpicam/: README.md  hailo_yolov8_inference.json  install.sh  requirements.txt
configs/tappas/: README.md  install.sh
docs/: BUILD.md  BUILD_GUIDE.md  CLAUDE.md  DEVELOPER_GUIDE.md  DEVELOPMENT.md  DISCOVERY_LOG.md  HARDWARE_COMPATIBILITY.md  INFERENCE_API.md  INSTALL_DEPS.md  MODEL_PIPELINE.md  README.md  SETUP.md
docs/deployments/: frigate.md  opencv-custom.md  python-direct.md  rpicam.md  tappas.md
docs/development/: api.md  contributing.md
docs/getting-started/: models.md  quickstart.md
docs/operations/: troubleshooting.md
logs/: terminal_responses.txt
models/: README.md
models/pi5-compatible/: README.md
models/rpicam-compatible/: README.md
models/x86-models/: README.md
scripts/: README.md  setup.sh
scripts/demos/: demo.sh  demo_detection.sh  run.sh  test.sh
scripts/diagnostics/: check_version_compatibility.sh  reset_camera.sh
scripts/driver/: get_official_driver.sh  install_official_driver.sh
scripts/frigate/: fix_frigate_install.sh  install_frigate_native.sh  setup_frigate_caddy.sh
scripts/preview/: basic_camera_test.sh  hailo_live_overlay.py  hailo_live_preview.py  hailo_live_preview.sh  hailo_preview_no_cv.py  live_preview.py  picamera_only_test.py  simple_camera_test.py
scripts/setup/: build_tappas_manual.sh  download_yolov8_models.sh  fix_version_mismatch.sh  install_build_dependencies.sh  install_build_deps.sh  install_opencv_python.sh  install_tappas.sh  setup_frigate.sh  (+3 more)
test/: README.md  hailo_yolov5m_custom.json  hailo_yolov5m_inference.json  hailo_yolov8_custom.json  run_complete_test.sh  run_test.sh  test_inference.py
(+45 files in other folders)
